configs/06 Deployment.yaml
# category
apiVersion: apps/v1
kind: Deployment
metadata:
  name: category
  namespace: cloud-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: category
  template:
    metadata:
      labels:
        app: category
    spec:
      containers:
        - name: category
          image: nginxdemos/hello
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "50m"
          ports:
            - containerPort: 80
---
# product
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
  namespace: cloud-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: nginxdemos/hello
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "50m"
          ports:
            - containerPort: 80
---
# tva
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tva
  namespace: cloud-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tva
  template:
    metadata:
      labels:
        app: tva
    spec:
      containers:
        - name: tva
          image: nginxdemos/hello
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "50m"
          ports:
            - containerPort: 80
---
# unit
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unit
  namespace: cloud-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unit
  template:
    metadata:
      labels:
        app: unit
    spec:
      containers:
        - name: unit
          image: nginxdemos/hello
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "50m"
          ports:
            - containerPort: 80
---
# location
apiVersion: apps/v1
kind: Deployment
metadata:
  name: location
  namespace: cloud-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: location
  template:
    metadata:
      labels:
        app: location
    spec:
      containers:
        - name: location
          image: nginxdemos/hello
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "50m"
          ports:
            - containerPort: 80
---
# company
apiVersion: apps/v1
kind: Deployment
metadata:
  name: company
  namespace: cloud-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: company
  template:
    metadata:
      labels:
        app: company
    spec:
      containers:
        - name: company
          image: nginxdemos/hello
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "50m"
          ports:
            - containerPort: 80
---
# use
apiVersion: apps/v1
kind: Deployment
metadata:
  name: use
  namespace: cloud-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: use
  template:
    metadata:
      labels:
        app: use
    spec:
      containers:
        - name: use
          image: nginxdemos/hello
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "50m"
          ports:
            - containerPort: 80
---
# supplier
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supplier
  namespace: cloud-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: supplier
  template:
    metadata:
      labels:
        app: supplier
    spec:
      containers:
        - name: supplier
          image: nginxdemos/hello
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "50m"
          ports:
            - containerPort: 80
---
# document
apiVersion: apps/v1
kind: Deployment
metadata:
  name: document
  namespace: cloud-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: document
  template:
    metadata:
      labels:
        app: document
    spec:
      containers:
        - name: document
          image: nginxdemos/hello
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "50m"
          ports:
            - containerPort: 80
          volumeMounts:
            - name: document-storage
              mountPath: /data
      volumes:
        - name: document-storage
          persistentVolumeClaim:
            claimName: s3-pvc

---
# database
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: cloud-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: nginxdemos/hello
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "50m"
          ports:
            - containerPort: 80
---
# keycloak
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: cloud-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: nginxdemos/hello
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "50m"
          ports:
            - containerPort: 80
---
# s3
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3
  namespace: cloud-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: s3
  template:
    metadata:
      labels:
        app: s3
    spec:
      containers:
        - name: s3
          image: nginxdemos/hello
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "50m"
          ports:
            - containerPort: 80
          volumeMounts:
            - name: document-storage
              mountPath: /data
      volumes:
        - name: document-storage
          persistentVolumeClaim:
            claimName: s3-pvc
---
# event broker
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evbroker
  namespace: cloud-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evbroker
  template:
    metadata:
      labels:
        app: evbroker
    spec:
      containers:
        - name: evbroker
          image: nginxdemos/hello
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "50m"
          ports:
            - containerPort: 80
---
# frontend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: cloud-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: nginxdemos/hello
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "50m"
          ports:
            - containerPort: 80
